fix: dark mode ok for now

--- a/src/master.css
+++ b/src/master.css
@@ -1,9 +1,3 @@
-html,
-#root {
-  background-color: #131515;
-  color: #fffafb;
-}
-
 .dark-mode {
   background-color: #131515;
   color: #fffafb;
